crates/sql-orm/tests/ui/entity_foreign_key_structured_missing_column.stderr
error[E0599]: no function or associated item named `account_id` found for struct `Customer` in the current scope
  --> tests/ui/entity_foreign_key_structured_missing_column.rs:18:51
   |
 5 | pub struct Customer {
   | ------------------- function or associated item `account_id` not found for this struct
...
18 |     #[orm(foreign_key(entity = Customer, column = account_id))]
   |                                                   ^^^^^^^^^^ function or associated item not found in `Customer`
